Please add items to this changelog that are:

 * New features.
 * Bugs that have been fixed.

Add items using the following format:

   [Name]
   * What you did 
   * If a bug (LP: #BUGNUMBER)

   For example:

   [Matt Fischer]
   * Fixed this format section (LP: #000000000)

-------------------------------------------------------------------------

Next Version Target: 0.4

   [Howard Chan]
   * New accomplishment: Testcase Admins
   * New accomplishment: First Bug Fixed
   * Changed all accomplishments with name="Sliver Fox" to "s.fox" to avoid duplicates (LP: #1080346)
 

-------------------------------------------------------------------------